--- a/stylesmine.css
+++ b/stylesmine.css
@@ -49,7 +49,7 @@ body {
 	top: 0;
 	background-position: center;
 	background-size: cover;
-	opacity: 0.7;
+	opacity: 0.5;
 }
 
 .overlay-image2 {
@@ -290,11 +290,11 @@ body {
 		background-color: rgb(39, 35, 35);
 	}
 	.img-logo {
-		width: 90% !important;
+		width: 60% !important;
 		margin-top: 30% !important;
 	}
 	.img-logo2 {
-		width: 100% !important;
+		width: 80% !important;
 		margin-top: 10% !important;
 	}
 	.imgsomos {
@@ -345,12 +345,12 @@ body {
 		width: 300px;
 	}
 	.img-logo {
-		width: 90% !important;
+		width: 60% !important;
 		margin-top: 20% !important;
 	}
 	.img-logo2 {
-		width: 100% !important;
-		margin-top: 10% !important;
+		width: 80% !important;
+		margin-top: 20% !important;
 	}
 	.width-sm {
 		width: 90%;
@@ -374,11 +374,11 @@ body {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
 	.img-logo {
-		width: 80% !important;
+		width: 60% !important;
 		margin-top: 20% !important;
 	}
 	.img-logo2 {
-		width: 90% !important;
+		width: 60% !important;
 		margin-top: 10% !important;
 	}
 	/* ================ INTEGRANTES =================== */
@@ -444,17 +444,17 @@ body {
 
 
 
-@media only screen and (min-width: 815.98px) and (max-width: 890px) and (orientation: landscape) {
+@media only screen and (min-width: 815.98px) and (max-width: 889.98px) and (orientation: landscape) {
 	.fondo-sm {
 		background-color: rgba(0, 0, 0, 0.4);
 	}
 	.img-logo {
-		width: 380px !important;
-		margin-top: 100px !important;
+		width: 60% !important;
+		margin-top: 15% !important;
 	}
 	.img-logo2 {
-		width: 450px !important;
-		margin-top: 50px !important;
+		width: 60% !important;
+		margin-top: 12% !important;
 	}
 	.carousel-caption {
 		margin-bottom: 1rem !important;
@@ -478,16 +478,16 @@ body {
 	}
 }
 
-@media only screen and (min-width: 861px) and (max-width: 1199.98px) and (orientation: landscape) {
+@media only screen and (min-width: 890px) and (max-width: 1199.98px) and (orientation: landscape) {
 	.fondo-sm {
 		background-color: rgba(0, 0, 0, 0.4);
 	}
 	.img-logo {
-		width: 100% !important;
+		width: 60% !important;
 		margin-top: 10% !important;
 	}
 	.img-logo2 {
-		width: 100% !important;
+		width: 60% !important;
 		margin-top: 3% !important;
 	}
 	.carousel-caption {
@@ -529,27 +529,27 @@ body {
 		width: 90%;
 	}
 	.img-logo {
-		width: 70% !important;
+		width: 40% !important;
 		margin-top: 10% !important;
 	}
 	.img-logo2 {
-		width: 70% !important;
+		width: 40% !important;
 		margin-top: 5% !important;
 	}
 	.carousel-cong {
-		width: 90%;
+		width: 55%;
 	}
 	.carousel-item-cong, .carousel-inner-cong, .img-congresos {
 		width: 100% !important;	
 	}
-	.img-congresos {
-		height: auto !important;
-		opacity: 1 !important;
-	}
 	.img-proyecto {
-		width: 45%
+		width: 35%
 	}
 	.img-proyecto2 {
-		width: 30%
+		width: 25%
+	}
+	.img-congresos {
+		height: 80vh !important;
+		opacity: 1 !important;
 	}
 }
